feat: add github actions

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "cross-env NODE_PATH=./dist && node ./dist/index.js",
     "dev": "nodemon",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "tsc",
     "prepare": "husky"
   },
   "repository": {
