--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -15,6 +15,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Test
+        run: npm run test
+
+      - name: Build project
+        run: npm run build
+
       - name: Install Vercel
         run: npm install -g vercel
 
