--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -14,6 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+
+      - name: Install dependencies
+        run: npm run ci
 
       - name: Test
         run: npm run test
