--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -1,8 +1,7 @@
 name: Ticket Nami Service production buildspec
 
 env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }} 
 
 on:
   push:
@@ -27,16 +26,10 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Install Vercel
-        run: npm install -g vercel
+      - name: Install Railway
+        run: npm install -g @railway/cli
 
-      - name: Pull Vercel env
-        run: vercel pull  --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Build project
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Deploy project
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy to Railway
+        run: railway up
 
 
